# RAG-Based-Document-Gap-Analysis-Pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  chunking.py  chunking_v2.py  docker-compose.yml  docker-entrypoint.sh  gap_analysis_prompt.py  ingestion_prompt.py  inspect_chroma_chunks.ipynb  inspect_store.py  pyproject.toml  requirements.txt  test_docx.py  test_docx_db.py
data/: kb_metadata.json
data/uploads/kb/: 03537315-2ed9-470e-97f6-0e1a93c3b3ce_RISE BRD 2.docx  b2750661-b836-45f9-90e7-0cf42da5765d_v2_UserStories.docx  c0ccee6d-cd39-40d7-96df-f46a01aad948_Rise User Stories.docx
docs/: ARCHITECTURE.md  DEVELOPMENT.md  SETUP.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ChatPanel.tsx  ComparisonView.tsx  GapAnalysisDashboard.tsx  GapPanel.tsx  KnowledgeBaseManager.tsx  Login.tsx  PdfUpload.tsx
frontend/src/context/: AuthContext.tsx
src/: config.py  logging_config.py
src/rag_api/: __init__.py  add_user.py  app.py  auth.py  dependencies.py  main.py  seed_users.py
src/rag_api/routes/: __init__.py  auth.py  chat.py  documents.py  gaps.py  knowledge_base.py
src/rag_api/services/: __init__.py  metadata.py
src/rag_ingest/: __init__.py  __main__.py  chunking.py  exceptions.py  extractor.py  ingest.py  models.py  pipeline.py  store.py
src/rag_ingest/llm/: __init__.py  base.py  factory.py  openai_provider.py
tests/: test_ingest.py  test_store.py
(+5 files in other folders)
