[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-ingest"
version = "0.1.0"
description = "Structured ingestion for PDFs and docs files, preserving hierarchy for later chunking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "docling>=2.0",
  "chromadb>=1.0",
  "openai>=1.0",
  "python-dotenv>=1.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
